--- a/package.json
+++ b/package.json
@@ -34,5 +34,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "daisyui": "^2.15.3",
+    "postcss": "^8.4.14",
+    "react-hot-toast": "^2.2.0",
+    "react-router-dom": "^6.3.0",
+    "tailwindcss": "^3.1.2"
   }
 }
