--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "aos": "^2.3.4",
+    "firebase": "^9.9.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
